now page link update auto adds missing chapters/pages